--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Tabela do PostgreSQL</title>
   <style>
     body {
@@ -34,7 +34,7 @@
   </table>
 
   <script>
-    fetch('http://localhost:3000/dados')
+    fetch('https://tii2.onrender.com/dados')  <!-- ALTERE PARA A URL DO SEU SERVIÇO -->
       .then(res => res.json())
       .then(dados => {
         const cabecalho = document.getElementById('cabecalho');
@@ -63,6 +63,9 @@
             corpo.appendChild(tr);
           });
         }
+      })
+      .catch(error => {
+        console.error('Erro ao buscar dados:', error);
       });
   </script>
 </body>
